<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="32dp"
        android:layout_gravity="center"
        android:padding="16dp">
        <EditText
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id"
            android:inputType="number" />

        <EditText
            android:id="@+id/fio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fio" />

        <EditText
            android:id="@+id/faculty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/faculty" />

        <EditText
            android:id="@+id/group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="228dp"
        android:layout_gravity="bottom"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:backgroundTint="#393"
            android:text="@string/buttonAdd"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/update"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:backgroundTint="#1B32DE"
            android:text="@string/buttonUpdate"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/show"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:backgroundTint="#D9AB2C"
            android:text="@string/buttonShow"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:backgroundTint="#933"
            android:text="@string/buttonDelete"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="16sp" />
    </LinearLayout>
</FrameLayout>